Fixed learner auth
